--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
-torch==2.7.1+cu118
-torchvision==0.22.1+cu118
+pip>=23.1.2
+setuptools>=68.0.0
+wheel>=0.40.0
+
+torch>=2.0.1
+torchvision>=0.15.2
 torchaudio==2.7.1+cu118
---extra-index-url https://download.pytorch.org/whl/cu118
-numpy
-scipy
-matplotlib
-scikit-image
-Pillow
-tqdm
-kagglehub
+torchmetrics>=0.11.4
+
+numpy>=1.25.0,<1.27.0
+scipy>=1.8
+matplotlib>=3.7.1
+scikit-image>=0.19
+Pillow>=9.0
+tqdm>=4.65.0
+
+pandas>=2.0
+scikit-learn>=1.2
+
+kaggle>=1.5
+
+tensorboard>=2.15
