--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ wheel>=0.40.0
 
 torch>=2.0.1
 torchvision>=0.15.2
-torchaudio==2.7.1+cu118
+torchaudio>=2.7.1
 torchmetrics>=0.11.4
 
-numpy>=1.25.0,<1.27.0
+numpy>=1.25.0
 scipy>=1.8
 matplotlib>=3.7.1
 scikit-image>=0.19
@@ -20,3 +20,7 @@ scikit-learn>=1.2
 kaggle>=1.5
 
 tensorboard>=2.15
+
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
